--- a/form.html
+++ b/form.html
@@ -21,8 +21,8 @@
             </nav>
         </div>
         <h3>Форма набора помощников</h3>
-        <!--<form action="../../cgi-bin/form_action.py" method='get' target='_self'>-->
-        <!--<form action="http://185.182.111.214:7628/cgi-bin/form_action.py" method='get' target='_self'>-->
+        <form action="../../cgi-bin/form_action.py" method='get' target='_self'>
+        <form action="http://185.182.111.214:7628/cgi-bin/form_action.py" method='get' target='_self'>
         <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
             <p>фамилия: <input type="Text" name="last_name" size=20  placeholder="петрова"></p>
             <p>имя: <input type="Text" name="last_name" size=20  placeholder="анна"></p>
@@ -60,3 +60,4 @@
         </form>
     </body>
 </html>
+
