--- a/form.html
+++ b/form.html
@@ -21,9 +21,9 @@
             </nav>
         </div>
         <h3>Форма набора помощников</h3>
-        <form action="../../cgi-bin/form_action.py" method='get' target='_self'>
-        <form action="http://185.182.111.214:7628/cgi-bin/form_action.py" method='get' target='_self'>
-        <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
+        <!--<form action="../../cgi-bin/form_action.py" method='get' target='_self'>-->
+        <!--<form action="http://185.182.111.214:7628/cgi-bin/form_action.py" method='get' target='_self'>-->
+        <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank" align="center">
             <p>фамилия: <input type="Text" name="last_name" size=20  placeholder="петрова"></p>
             <p>имя: <input type="Text" name="last_name" size=20  placeholder="анна"></p>
             <p>возраст: <input type="Number" name="age" size=20 placeholder="0"></p>
@@ -60,4 +60,5 @@
         </form>
     </body>
 </html>
+
 
