--- a/table.html
+++ b/table.html
@@ -5,8 +5,8 @@
         <title>warm hook store</title>
         <link rel="stylesheet" href="table.css" />
         <script language = "JavaScript">
-            var bigsize = "600"; //Размер большой картинки
-            var smallsize = "100"; //Размер маленькой картинки
+            var bigsize = "600";
+            var smallsize = "100";
             function changeSizeImage(im) {
                 if(im.height == bigsize) im.height = smallsize;
                 else im.height = bigsize;
@@ -82,4 +82,5 @@
             </div>
         </div>
    </body> 
+
 </html>
