--- a/form.html
+++ b/form.html
@@ -55,11 +55,12 @@
                 <input type="hidden" name="page_id"  value="3">
             <p>
                 <input type="Reset"  name="Reset"  value="Обновить">
-                <input type="Submit" name="submit"  value="Отправить">
+                <input type="submit" id="send-btn" value="Отправить резюме">
             </p>
         </form>
     </body>
 </html>
+
 
 
 
