--- a/form.html
+++ b/form.html
@@ -23,7 +23,7 @@
         <h3>Форма набора помощников</h3>
         <form action="../../cgi-bin/form_action.py" method='get' target='_self'>
         <form action="http://185.182.111.214:7628/cgi-bin/form_action.py" method='get' target='_self'>
-        <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank" align="center">
+        <form action=""https://yandex.com/search?" id="UserEnter" name="UserEnter" target="_blank" align="center">
             <p>фамилия: <input type="Text" name="last_name" size=20  placeholder="петрова"></p>
             <p>имя: <input type="Text" name="last_name" size=20  placeholder="анна"></p>
             <p>возраст: <input type="Number" name="age" size=20 placeholder="0"></p>
@@ -60,6 +60,7 @@
         </form>
     </body>
 </html>
+
 
 
 
