--- a/form.html
+++ b/form.html
@@ -56,10 +56,12 @@
             <p>
                 <input type="Reset" name="Reset" value="Обновить">
                 <input type="Submit" name="submit" value="Отправить">
+                <button type="Submit" name="submit"  value="Отправить">Отправить</button>
             </p>
         </form>
     </body>
 </html>
+
 
 
 
