--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="base">
                 <div class="base-1">ульяна саломатова, 18 лет</div>
                 <div class="base-2"><a href="https://spb.hse.ru/">ниу вшэ - санкт-петербург</a>, филология, 2 курс</div>
-                <div class="annotation">я не представляю свою жизнь без творчества. меня всегда затягивала долгая и кропотливая работа руками, поэтому уже 3 года вяжу <i>крючком с теплом</i> и помогаю подобрать подарки ручной работы для себя и близких!</div>        
+                <div class="annotation">я не представляю свою жизнь без творчества. меня всегда затягивала долгая и кропотливая работа руками, поэтому уже <b>3 года</b> вяжу <i>крючком с теплом</i> и помогаю подобрать подарки ручной работы для себя и близких!</div>        
                 <div class="img2_0">
                     <img class="flow" src="img/flow.jpg" >
                     <button class="tgk" type="button"><a href="https://t.me/warmhook" target="_blank">телеграм-канал магазина</a></button>
@@ -34,4 +34,5 @@
             </div>
         </div>
    </body> 
+
 </html>
