--- a/zadacha.html
+++ b/zadacha.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="zadacha.css">
 </head>
 <body>
-    <h1><a href="fedun.html">крючком с теплом</a></h1>
+    <h1><a href="index.html">крючком с теплом</a></h1>
     <h2><i>магазин вязаных игрушек</i></h2>
     <div>
         <nav>
@@ -45,4 +45,5 @@
         </div>
   <script src="zadacha.js"></script>
 </body>
+
 </html>
