--- a/zadacha.html
+++ b/zadacha.html
@@ -11,7 +11,7 @@
     <div>
         <nav>
             <ul>
-                <li><a href="fedun.html">о создателе</a></li>
+                <li><a href="index.html">о создателе</a></li>
                 <li><a href="catalog.html">каталог</a></li>
                 <li><a href="table.html">бренд</a></li>
                 <li><a href="form.html">работа</a></li>
@@ -47,3 +47,4 @@
 </body>
 
 </html>
+
