--- a/form.html
+++ b/form.html
@@ -42,6 +42,7 @@
             </select>
             </p>
             <p>ключ-пароль: <input type="password" name="key" size=25 placeholder="если вы пришли от кого-то"></p>
+            <p>дата: <input type="date" name="date"></p>
             <p> дополнительная информация:
                 <br>
                 <textarea cols="50" rows=4 name="textarea" placeholder="для заметок"></textarea>
@@ -60,6 +61,7 @@
         </form>
     </body>
 </html>
+
 
 
 
